Headless gnome-remote-desktop sessions no longer working with mutter 47.2
Affected version
mutter-47.2-1.fc41.x86_64
Bug summary
Fedora 41, running in Hyper-V VM on Windows 10. Connection to headless g-r-d session is via Microsoft's Remote Desktop, from the same laptop where the VM is.
Black screen.
Reproducible: Always
Steps to Reproduce:
- Update mutter to 47.2.
- Connect to headless g-r-d via RDP.
- Black screen.
Actual Results:
Black screen.
Expected Results:
Works with mutter 47.1. Downgrading to that version fixes the problem.
See: https://bodhi.fedoraproject.org/updates/FEDORA-2024-5386298b3b
Here is the log, when I attempt the connection:
Nov 27 21:36:26 fedora gnome-remote-desktop-daemon[959]: [21:36:26:439] [959:00000687] [ERROR][com.freerdp.core.transport] - [transport_read_layer]: BIO_read returned a system error 104: Connection reset by peer
Nov 27 21:36:26 fedora gnome-remote-desktop-daemon[959]: [21:36:26:439] [959:00000687] [ERROR][com.freerdp.core.peer] - [transport_read_layer]: ERRCONNECT_CONNECT_TRANSPORT_FAILED [0x0002000D]
Nov 27 21:36:26 fedora gnome-remote-desktop-daemon[959]: [21:36:26:439] [959:00000687] [ERROR][com.freerdp.core.nla] - [nla_server_recv_stream]: nla_recv() error: -1
Nov 27 21:36:26 fedora gnome-remote-desktop-daemon[959]: [21:36:26:439] [959:00000687] [ERROR][com.freerdp.core.transport] - [transport_accept_nla]: client authentication failure
Nov 27 21:36:26 fedora gnome-remote-desktop-daemon[959]: [21:36:26:439] [959:00000687] [ERROR][com.freerdp.core.peer] - [peer_recv_callback_internal]: CONNECTION_STATE_NEGO - rdp_server_accept_nego() fail
Nov 27 21:36:26 fedora gnome-remote-desktop-daemon[959]: [21:36:26:439] [959:00000687] [ERROR][com.freerdp.core.transport] - [transport_check_fds]: transport_check_fds: transport->ReceiveCallback() - STATE_RUN_FAILED [-1]
Nov 27 21:36:26 fedora gnome-remote-desktop-daemon[959]: [21:36:26:439] [959:000003bf] [ERROR][com.freerdp.core.transport] - [transport_default_write]: BIO_should_retry returned a system error 32: Broken pipe
Nov 27 21:36:26 fedora gnome-remote-de[959]: [RDP] Network or intentional disconnect, stopping session
Nov 27 21:36:27 fedora kernel: hv_balloon: Max. dynamic memory size: 1048576 MB
Nov 27 21:36:27 fedora gnome-remote-desktop-daemon[959]: [21:36:27:730] [959:0000068a] [ERROR][com.freerdp.core.tpkt] - [tpkt_ensure_stream_consumed_]: [rdp_read_info_packet] Received invalid TPKT header length 576, 206 bytes too long!
Nov 27 21:36:27 fedora gnome-remote-de[959]: [RDP.CLIPRDR] Client capabilities: long format names, stream file clip, file clip no file paths, can lock clip data, huge file support
Nov 27 21:36:27 fedora gnome-shell[996]: Added virtual monitor Meta-0
Nov 27 21:36:27 fedora gnome-remote-de[959]: [RDP.AUDIO_PLAYBACK] Client Formats: [AAC: true, Opus: false, PCM: true]
Nov 27 21:36:27 fedora gnome-remote-de[959]: [RDP.RDPGFX] CapsAdvertise: Accepting capability set with version RDPGFX_CAPVERSION_106, Client cap flags: H264 (AVC444): true, H264 (AVC420): true
Nov 27 21:36:42 fedora systemd[858]: Starting gvfs-metadata.service - Virtual filesystem metadata service...
Nov 27 21:36:42 fedora systemd[858]: Started gvfs-metadata.service - Virtual filesystem metadata service.
Nov 27 21:36:43 fedora geoclue[1456]: Service not used for 60 seconds. Shutting down..
Nov 27 21:36:43 fedora systemd[1]: geoclue.service: Deactivated successfully.
Nov 27 21:36:43 fedora audit[1]: SERVICE_STOP pid=1 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='unit=geoclue comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Nov 27 21:36:47 fedora systemd[1]: systemd-hostnamed.service: Deactivated successfully.
Nov 27 21:36:47 fedora audit[1]: SERVICE_STOP pid=1 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='unit=systemd-hostnamed comm="systemd" exe="/usr/lib/systemd/systemd" hostname=? addr=? terminal=? res=success'
Nov 27 21:36:47 fedora audit: BPF prog-id=49 op=UNLOAD
Nov 27 21:36:52 fedora chronyd[720]: Selected source 180.150.8.191 (2.fedora.pool.ntp.org)
Edited by Bojan Smojver